--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,15 +1,36 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
-img {
-  width: 100px;
-  height: 100px;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+
+.item-container {
+  display: flex;
+  gap: 52px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 200px;
+  text-align: center;
+  gap: 5px;
+}
+
+img {
+  width: 100px;
+  height: 100px;
 }
 
 /* do not edit this footer */
